// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question editor plugins.renderNode calls next 1`] = `undefined`;

exports[`Question editor plugins.renderNode renders a question when passed 1`] = `
<Question
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Question",
    }
  }
/>
`;

exports[`Question editor plugins.renderNode renders a solution when passed 1`] = `
<Solution
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Question.Solution",
    }
  }
/>
`;
